sna/gen3: Add missing destination offsets to a few vertex emitters

Sometimes we apply a destination offset (for when the coordinates are
too large to be automatically offset by the 3D pipeline). Only a few
paths had forgotten to apply the aforementioned offset.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=93816
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>